[package]
name = "distacean"
version = "0.0.0"
edition = "2024"
authors = ["Jonah Nestrick <jonah.nestrick@gmail.com>"]
description = "Placeholder for upcoming distributed computing library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/undecidedapollo/distacean"
homepage = "https://distacean.com"
keywords = []
categories = []
[dependencies]
openraft        = { git = "https://github.com/databendlabs/openraft", branch = "release-0.10", features = ["serde", "type-alias"] }

serde              = { version = "1.0.114", features = ["derive"] }
tokio              = { version = "1.0", default-features = false, features = ["sync", "net", "io-util", "rt", "macros"] }
tracing            = { version = "0.1.29" }
byteorder  = { version = "1.4.3" }
rand       = { version = "0.9" }
rocksdb    = { version = "0.22.0" }
thiserror = "2.0.17"
rmp-serde = "1.3.0"


[dev-dependencies]
anyhow = { version = "1.0.63" }
maplit = { version = "1.0.2" }
actix-web          = { version = "4.0.0-rc.2" }
clap               = { version = "4.1.11", features = ["derive", "env"] }
reqwest            = { version = "0.12.5", features = ["json"] }
serde_json         = { version = "1.0.57" }
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
futures = "0.3.31"
md5 = "0.7"

[features]

[package.metadata.docs.rs]
all-features = true
